--- a/render/index.pug
+++ b/render/index.pug
@@ -14,8 +14,9 @@ html(lang='en')
       //- TITLE
       //-
       div(class='row')
-        div(class='col-xs-12 bottom-spacer')
-          h1(class='text-center') Baresoil Image Processing Benchmark (AWS)
+        div(class='col-xs-12 bottom-spacer text-center')
+          h1 Baresoil Image Processing Benchmark (AWS)
+          p This is a repeatable, #[a(href='https://github.com/iceroad/baresoil-benchmark-image-resizer') open code and data] benchmark.
 
       //-
       //- INTRODUCTION
@@ -28,7 +29,7 @@ html(lang='en')
             strong= extVariables.runStartTime
           p.
             This benchmark load tests a user-uploaded image processing API hosted
-            on a Baresoil cluster. The image processing performed is basic
+            on a #[a(href='https://www.baresoil.com/') Baresoil] cluster. The image processing performed is basic
             cropping, image adjustments, and metadata extraction from a JPEG
             image, using the Unix command-line tool ImageMagick.
 
