--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -2,7 +2,7 @@
   font-family: 'Ubuntu Mono';
   font-style: normal;
   font-weight: 400;
-  src: local('Ubuntu Mono'), local('UbuntuMono-Regular'), url(./UbuntuMono-Regular.ttf) format('truetype');
+  src: local('Ubuntu Mono'), local('UbuntuMono-Regular'), url(/assets/UbuntuMono-regular.ttf) format('truetype');
 }
 
 @font-face {
