Add benchmark for c4.4xl

--- a/render/index.pug
+++ b/render/index.pug
@@ -29,7 +29,7 @@ html(lang='en')
             strong= extVariables.runStartTime
           p.
             This benchmark load tests a user-uploaded image processing API hosted
-            on a #[a(href='https://www.baresoil.com/') Baresoil] cluster. The image processing performed is basic
+            on a #[a(href='https://www.baresoil.org/') Baresoil] cluster. The image processing performed is basic
             cropping, image adjustments, and metadata extraction from a JPEG
             image, using the Unix command-line tool ImageMagick.
 
