--- a/report/content/header.pug
+++ b/report/content/header.pug
@@ -1,7 +1,7 @@
 div(class='row')
   div(class='col-xs-12 bottom-spacer text-center')
     h1 #[a(href='https://www.baresoil.org/') Baresoil] Image Resizing Benchmark (AWS)
-    p This is a repeatable, #[a(href='https://github.com/iceroad/baresoil-benchmark-image-resizer') open code and data] benchmark.
+    p This is a repeatable, #[+ExtLinkOwned('https://github.com/iceroad/baresoil-benchmark-image-resizer', 'open code and data')] benchmark.
     p
       span Benchmark date:&nbsp;
       strong(class='format-short-date', data-date=extVariables.runStartTime)= extVariables.runStartTime
