--- a/report/content/intro.pug
+++ b/report/content/intro.pug
@@ -1,5 +1,20 @@
 div(class='row')
   div(class='col-xs-12 col-md-6 col-md-offset-1 bottom-spacer')
+    table(class='links-box')
+      tr
+        td #[span Demo]
+        td #[+ExtLinkOwned('https://img.baresoil.cloud', 'img.baresoil.cloud')]
+      tr
+        td Code and data
+        td #[+ExtLinkOwned('https://github.com/iceroad/baresoil-benchmark-image-resizer', 'iceroad/baresoil-benchmark-image-resizer')]
+      tr
+        td Homepage
+        td #[a(href='https://www.baresoil.org') www.baresoil.org]
+
+      tr
+        td Other benchmarks
+        td #[a(href='https://iceroad.github.io/baresoil-benchmark-face-detection/') Face Detection]
+
     h3 Introduction
     p.
       #[a(href='https://www.baresoil.org/') Baresoil] can be used to quickly
@@ -29,7 +44,7 @@ div(class='row')
   //- SUMMARY
   //-
   div(class='col-xs-12 col-md-4')
-    h3 Results
+    h3 Summary
 
     table(class='table table-compact metrics-table')
       tr
