--- a/report/style/main.less
+++ b/report/style/main.less
@@ -1,27 +1,8 @@
 @import '~bootstrap/less/bootstrap.less';
 @import '~bootswatch/paper/bootswatch.less';
 @import '~bootswatch/paper/variables.less';
-
-@font-face {
-  font-family: 'Ubuntu Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Ubuntu Mono'), local('UbuntuMono-Regular'), url(assets/UbuntuMono-regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(assets/cJZKeOuBrn4kERxqtaUH3aCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(assets/k3k702ZOKiLJc3WVjuplzInF5uFdDttMLvmWuJdhhgs.ttf) format('truetype');
-}
+@import './fonts.less';
+@import './widgets.less';
 
 canvas {
   width: 100%;
@@ -41,8 +22,8 @@ h3 {
 }
 
 h4 {
-  font-size: 18px;
-  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
   margin-bottom: 1.5em;
 }
 
@@ -65,14 +46,13 @@ img {
 }
 
 .metrics-table {
-  background-color: #FFFFE0;
+  background-color: #FFFFE9;
 
   td {
     padding: 5px;
     font-size: 18px;
 
-
-    &:first {
+    &:first-child {
       max-width: 50%;
       text-align: left;
     }
@@ -85,7 +65,37 @@ img {
   }
 }
 
+
 .figure {
   margin: 1em 0 1em 0;
   background-color: #efefef;
+}
+
+
+.links-box {
+  background-color: @gray-lighter;
+  border-radius: 4px;
+  td {
+    font-size: 16px;
+    padding: 10px 10px 10px 10px;
+    font-weight: 600;
+    line-height: 125%;
+  }
+}
+
+ol {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+dt {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+dd {
+  font-size: 16px;
+  line-height: 150%;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
