--- a/report/content/intro.pug
+++ b/report/content/intro.pug
@@ -68,12 +68,21 @@ div(class='row')
         td(class='metric')
           span= '$' + analysis.Aggregates.bottomLine.costPerHourReserved
           strong  USD
+
+      tr
+        td Cluster cost per hour (spot)
+        td(class='metric')
+          span= '$' + analysis.Aggregates.bottomLine.costPerHourSpot
+          strong  USD
+
     p.
       #[sup *] Using #[strong= extVariables.server.instances.count]
       on-demand EC2
       #[strong= extVariables.server.instances.type]
       instances  in #[strong= extVariables.server.region], priced at
-      $#[strong= extVariables.server.instances.costPerHour.retail] per hour,
+      $#[strong= extVariables.server.instances.costPerHour.retail] per hour (on-demand),
+      $#[strong= extVariables.server.instances.costPerHour.reserved] per hour (reserved),
+      $#[strong= extVariables.server.instances.costPerHour.spot] per hour (spot),
       RDS on-demand costs of $#[strong= extVariables.server.rds.costPerHour]
       per hour, ELB costs of $#[strong= extVariables.server.elb.costPerHour]
       per hour and $#[strong= extVariables.server.elb.costPerGB] per gigabyte
